refactoring: Adding Saga